tests/compile-fail/invalid_bool.stderr
error: Undefined Behavior: interpreting an invalid 8-bit value as a bool: $HEX
  --> $DIR/invalid_bool.rs:LL:CC
   |
LL |     let _x = b == std::hint::black_box(true); //~ ERROR interpreting an invalid 8-bit value as a bool: $HEX
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ interpreting an invalid 8-bit value as a bool: $HEX
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/invalid_bool.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

